Prevented line wrapping

--- a/main.css
+++ b/main.css
@@ -146,8 +146,8 @@ svg {
 }
 
 .downloadLink {
-    margin: 20 auto;
-    width: 70%;
+    margin: 20 0 20 20%;
+    width: 80%;
     display: block;
 }
 
